--- a/style.css
+++ b/style.css
@@ -6,6 +6,62 @@
 
 }
 
+.buttons{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-items: center;
+    align-items: center;
+}
+
+.arrow-images{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-items: center;
+    align-items: center;
+    position: relative;
+    margin-top: 20px;
+}
+.image1{
+    position: absolute;
+    left: 310px;
+}
+
+.image2{
+    position: absolute;
+    right: 310px;
+}
+
+.image3{
+    position: absolute;
+}
+.buttons button{
+    background-color: black;
+    color: white;
+    border: 0px transparent;
+    cursor: pointer;
+    border-radius: 50%;
+    font-size: large;
+}
+
+.button1{
+    padding: 50px 20px;
+
+}
+.button2{
+    padding: 30px 20px;
+
+}
+
+.button3{
+    padding: 40px 20px;
+
+}
+
+.buttons button:hover{
+    transition: 0.4s ease-in-out;
+    transform: scale(105%);
+}
+
 ul{
     list-style: none;
 }
@@ -14,7 +70,7 @@ a{
     display: block;
     text-decoration: none;
     padding: 20px;
-    background-color: black;
+    background-color: rgb(19, 8, 49);
     margin: 10px;
     text-align: center;
     color: white;
@@ -22,10 +78,11 @@ a{
 
 a:hover{
     opacity: 0.8;
-    transition: 0.3s ease-in-out;
+    transition: 0.4s ease-in-out;
+    transform: scale(105%);
 }
 
-h1{
+h1, h2{
     text-align: center;
     margin: 30px 0;
 }
@@ -38,3 +95,63 @@ ul{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
 }
+
+.tab-border {
+    border-bottom: 4px solid red;
+  }
+
+  #tab-1-content,
+#tab-2-content,
+#tab-3-content {
+  display: none;
+}
+
+.image1, .image2, .image3{
+  display: none;
+
+}
+
+.show {
+  display: block !important;
+}
+
+@media(max-width:1000px) {
+    ul{
+    width: 90%;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+@media(max-width:800px) {
+    ul{
+    width: 90%;
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media(max-width:400px) {
+    ul{
+    width: 95%;
+        grid-template-columns: 1fr;
+    }
+
+    .buttons{
+        grid-template-columns: 1fr;
+    }
+    .buttons li{
+        padding: 10px;
+    }
+}
+
+@media(max-width:250px) {
+    a{
+        padding: 0;
+        margin: 5px;
+        padding: 1px;
+    }
+    ul{
+    width: 99%;
+        grid-template-columns: 1fr;
+    }
+}
+
