--- a/style.css
+++ b/style.css
@@ -6,6 +6,19 @@
 
 }
 
+section{
+    margin-top: 20px;
+}
+
+.dragon{
+    top: 0;
+    position: absolute;
+    width: 600px;
+    height: 500px;
+    background: url(./img/dragon.gif) no-repeat;
+    z-index: -1;
+}
+
 .buttons{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -35,7 +48,7 @@
     position: absolute;
 }
 .buttons button{
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.8);
     color: white;
     border: 0px transparent;
     cursor: pointer;
@@ -70,7 +83,7 @@ a{
     display: block;
     text-decoration: none;
     padding: 20px;
-    background-color: rgb(19, 8, 49);
+    background-color: rgb(181,40,8);
     margin: 10px;
     text-align: center;
     color: white;
@@ -97,7 +110,7 @@ ul{
 }
 
 .tab-border {
-    border-bottom: 4px solid red;
+    background-color: rgba(0, 0, 0) !important;
   }
 
   #tab-1-content,
@@ -126,6 +139,9 @@ ul{
     ul{
     width: 90%;
         grid-template-columns: 1fr 1fr;
+    }
+    .dragon{
+        display: none;
     }
 }
 
