--- a/self-projects/accordian-qa/style.css
+++ b/self-projects/accordian-qa/style.css
@@ -2,6 +2,12 @@
 /* ================================= */
 
 /* ================================= */
+
+main{
+    max-width: 1000px;
+    margin: auto;
+}
+
 .container {
     width: 100%;
 }
