--- a/self-projects/accordian-qa/style.css
+++ b/self-projects/accordian-qa/style.css
@@ -121,3 +121,13 @@ main{
     font-size: 16px;
 }
 }
+
+h2.title {
+    padding: 0;
+    margin: 0;
+    
+}
+
+.container.accordian {
+    font-family:monospace;
+}
