Fixing style issues and JS!

--- a/self-projects/accordian-qa/style.css
+++ b/self-projects/accordian-qa/style.css
@@ -131,3 +131,12 @@ h2.title {
 .container.accordian {
     font-family:monospace;
 }
+
+h3 {
+    font-family:monospace;
+    font-size: 40px;
+}
+
+main {
+    padding: 0 40px;
+}
